[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/spell/spell/spell_template.gd" type="Script" id=1]

[node name="SpellTemplate" type="Area2D"]
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="on_area_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
